AnalisadorSintatico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM IDENT corpo DOT
Rule 2     corpo -> dc BEGIN comandos END
Rule 3     dc -> dc_v mais_dc
Rule 4     dc -> dc_p mais_dc
Rule 5     dc -> empty
Rule 6     mais_dc -> SEMICOLON dc
Rule 7     mais_dc -> empty
Rule 8     dc_v -> VAR variaveis COLON tipo_var
Rule 9     tipo_var -> REAL
Rule 10    tipo_var -> INTEGER
Rule 11    variaveis -> IDENT mais_var
Rule 12    mais_var -> COMMA variaveis
Rule 13    mais_var -> empty
Rule 14    inicio_escopo -> empty
Rule 15    fim_escopo -> empty
Rule 16    dc_p -> PROCEDURE IDENT inicio_escopo parameters corpo_p fim_escopo
Rule 17    parameters -> LPAREN lista_par RPAREN
Rule 18    parameters -> empty
Rule 19    lista_par -> variaveis COLON tipo_var mais_par
Rule 20    mais_par -> SEMICOLON lista_par
Rule 21    mais_par -> empty
Rule 22    corpo_p -> dc_loc BEGIN comandos END
Rule 23    dc_loc -> dc_v mais_dcloc
Rule 24    dc_loc -> empty
Rule 25    mais_dcloc -> SEMICOLON dc_loc
Rule 26    mais_dcloc -> empty
Rule 27    comandos -> comando mais_comandos
Rule 28    mais_comandos -> comandos
Rule 29    mais_comandos -> empty
Rule 30    pt_virgula_opc -> SEMICOLON
Rule 31    pt_virgula_opc -> empty
Rule 32    comando -> READ LPAREN IDENT RPAREN pt_virgula_opc
Rule 33    comando -> WRITE LPAREN IDENT RPAREN pt_virgula_opc
Rule 34    comando -> IDENT ASSIGN expressao pt_virgula_opc
Rule 35    comando -> IF condicao THEN comandos pfalsa DOLLAR
Rule 36    condicao -> expressao relacao expressao
Rule 37    pfalsa -> marca_else ELSE comandos
Rule 38    pfalsa -> empty
Rule 39    marca_else -> empty
Rule 40    comando -> WHILE condicao DO comandos DOLLAR
Rule 41    comando -> IDENT lista_arg pt_virgula_opc
Rule 42    lista_arg -> LPAREN argumentos RPAREN
Rule 43    lista_arg -> empty
Rule 44    argumentos -> IDENT mais_ident
Rule 45    mais_ident -> COMMA argumentos
Rule 46    mais_ident -> empty
Rule 47    relacao -> EQ
Rule 48    relacao -> NEQ
Rule 49    relacao -> GTE
Rule 50    relacao -> LTE
Rule 51    relacao -> GT
Rule 52    relacao -> LT
Rule 53    expressao -> termo outros_termos
Rule 54    outros_termos -> op_ad termo outros_termos
Rule 55    outros_termos -> empty
Rule 56    op_ad -> PLUS
Rule 57    op_ad -> MINUS
Rule 58    termo -> op_un fator mais_fatores
Rule 59    op_un -> MINUS
Rule 60    op_un -> empty
Rule 61    mais_fatores -> op_mul fator mais_fatores
Rule 62    mais_fatores -> empty
Rule 63    op_mul -> TIMES
Rule 64    op_mul -> DIVIDE
Rule 65    fator -> IDENT
Rule 66    fator -> NUM_INT
Rule 67    fator -> NUM_REAL
Rule 68    fator -> LPAREN expressao RPAREN
Rule 69    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 34
BEGIN                : 2 22
COLON                : 8 19
COMMA                : 12 45
DIVIDE               : 64
DO                   : 40
DOLLAR               : 35 40
DOT                  : 1
ELSE                 : 37
END                  : 2 22
EQ                   : 47
GT                   : 51
GTE                  : 49
IDENT                : 1 11 16 32 33 34 41 44 65
IF                   : 35
INTEGER              : 10
LPAREN               : 17 32 33 42 68
LT                   : 52
LTE                  : 50
MINUS                : 57 59
NEQ                  : 48
NUM_INT              : 66
NUM_REAL             : 67
PLUS                 : 56
PROCEDURE            : 16
PROGRAM              : 1
READ                 : 32
REAL                 : 9
RPAREN               : 17 32 33 42 68
SEMICOLON            : 6 20 25 30
THEN                 : 35
TIMES                : 63
VAR                  : 8
WHILE                : 40
WRITE                : 33
error                : 

Nonterminals, with rules where they appear

argumentos           : 42 45
comando              : 27
comandos             : 2 22 28 35 37 40
condicao             : 35 40
corpo                : 1
corpo_p              : 16
dc                   : 2 6
dc_loc               : 22 25
dc_p                 : 4
dc_v                 : 3 23
empty                : 5 7 13 14 15 18 21 24 26 29 31 38 39 43 46 55 60 62
expressao            : 34 36 36 68
fator                : 58 61
fim_escopo           : 16
inicio_escopo        : 16
lista_arg            : 41
lista_par            : 17 20
mais_comandos        : 27
mais_dc              : 3 4
mais_dcloc           : 23
mais_fatores         : 58 61
mais_ident           : 44
mais_par             : 19
mais_var             : 11
marca_else           : 37
op_ad                : 54
op_mul               : 61
op_un                : 58
outros_termos        : 53 54
parameters           : 16
pfalsa               : 35
programa             : 0
pt_virgula_opc       : 32 33 34 41
relacao              : 36
termo                : 53 54
tipo_var             : 8 19
variaveis            : 8 12 19

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM IDENT corpo DOT

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . IDENT corpo DOT

    IDENT           shift and go to state 3


state 3

    (1) programa -> PROGRAM IDENT . corpo DOT
    (2) corpo -> . dc BEGIN comandos END
    (3) dc -> . dc_v mais_dc
    (4) dc -> . dc_p mais_dc
    (5) dc -> . empty
    (8) dc_v -> . VAR variaveis COLON tipo_var
    (16) dc_p -> . PROCEDURE IDENT inicio_escopo parameters corpo_p fim_escopo
    (69) empty -> .

    VAR             shift and go to state 9
    PROCEDURE       shift and go to state 10
    BEGIN           reduce using rule 69 (empty -> .)

    corpo                          shift and go to state 4
    dc                             shift and go to state 5
    dc_v                           shift and go to state 6
    dc_p                           shift and go to state 7
    empty                          shift and go to state 8

state 4

    (1) programa -> PROGRAM IDENT corpo . DOT

    DOT             shift and go to state 11


state 5

    (2) corpo -> dc . BEGIN comandos END

    BEGIN           shift and go to state 12


state 6

    (3) dc -> dc_v . mais_dc
    (6) mais_dc -> . SEMICOLON dc
    (7) mais_dc -> . empty
    (69) empty -> .

    SEMICOLON       shift and go to state 14
    BEGIN           reduce using rule 69 (empty -> .)

    mais_dc                        shift and go to state 13
    empty                          shift and go to state 15

state 7

    (4) dc -> dc_p . mais_dc
    (6) mais_dc -> . SEMICOLON dc
    (7) mais_dc -> . empty
    (69) empty -> .

    SEMICOLON       shift and go to state 14
    BEGIN           reduce using rule 69 (empty -> .)

    mais_dc                        shift and go to state 16
    empty                          shift and go to state 15

state 8

    (5) dc -> empty .

    BEGIN           reduce using rule 5 (dc -> empty .)


state 9

    (8) dc_v -> VAR . variaveis COLON tipo_var
    (11) variaveis -> . IDENT mais_var

    IDENT           shift and go to state 18

    variaveis                      shift and go to state 17

state 10

    (16) dc_p -> PROCEDURE . IDENT inicio_escopo parameters corpo_p fim_escopo

    IDENT           shift and go to state 19


state 11

    (1) programa -> PROGRAM IDENT corpo DOT .

    $end            reduce using rule 1 (programa -> PROGRAM IDENT corpo DOT .)


state 12

    (2) corpo -> dc BEGIN . comandos END
    (27) comandos -> . comando mais_comandos
    (32) comando -> . READ LPAREN IDENT RPAREN pt_virgula_opc
    (33) comando -> . WRITE LPAREN IDENT RPAREN pt_virgula_opc
    (34) comando -> . IDENT ASSIGN expressao pt_virgula_opc
    (35) comando -> . IF condicao THEN comandos pfalsa DOLLAR
    (40) comando -> . WHILE condicao DO comandos DOLLAR
    (41) comando -> . IDENT lista_arg pt_virgula_opc

    READ            shift and go to state 22
    WRITE           shift and go to state 24
    IDENT           shift and go to state 23
    IF              shift and go to state 25
    WHILE           shift and go to state 26

    comandos                       shift and go to state 20
    comando                        shift and go to state 21

state 13

    (3) dc -> dc_v mais_dc .

    BEGIN           reduce using rule 3 (dc -> dc_v mais_dc .)


state 14

    (6) mais_dc -> SEMICOLON . dc
    (3) dc -> . dc_v mais_dc
    (4) dc -> . dc_p mais_dc
    (5) dc -> . empty
    (8) dc_v -> . VAR variaveis COLON tipo_var
    (16) dc_p -> . PROCEDURE IDENT inicio_escopo parameters corpo_p fim_escopo
    (69) empty -> .

    VAR             shift and go to state 9
    PROCEDURE       shift and go to state 10
    BEGIN           reduce using rule 69 (empty -> .)

    dc                             shift and go to state 27
    dc_v                           shift and go to state 6
    dc_p                           shift and go to state 7
    empty                          shift and go to state 8

state 15

    (7) mais_dc -> empty .

    BEGIN           reduce using rule 7 (mais_dc -> empty .)


state 16

    (4) dc -> dc_p mais_dc .

    BEGIN           reduce using rule 4 (dc -> dc_p mais_dc .)


state 17

    (8) dc_v -> VAR variaveis . COLON tipo_var

    COLON           shift and go to state 28


state 18

    (11) variaveis -> IDENT . mais_var
    (12) mais_var -> . COMMA variaveis
    (13) mais_var -> . empty
    (69) empty -> .

    COMMA           shift and go to state 30
    COLON           reduce using rule 69 (empty -> .)

    mais_var                       shift and go to state 29
    empty                          shift and go to state 31

state 19

    (16) dc_p -> PROCEDURE IDENT . inicio_escopo parameters corpo_p fim_escopo
    (14) inicio_escopo -> . empty
    (69) empty -> .

    LPAREN          reduce using rule 69 (empty -> .)
    VAR             reduce using rule 69 (empty -> .)
    BEGIN           reduce using rule 69 (empty -> .)

    inicio_escopo                  shift and go to state 32
    empty                          shift and go to state 33

state 20

    (2) corpo -> dc BEGIN comandos . END

    END             shift and go to state 34


state 21

    (27) comandos -> comando . mais_comandos
    (28) mais_comandos -> . comandos
    (29) mais_comandos -> . empty
    (27) comandos -> . comando mais_comandos
    (69) empty -> .
    (32) comando -> . READ LPAREN IDENT RPAREN pt_virgula_opc
    (33) comando -> . WRITE LPAREN IDENT RPAREN pt_virgula_opc
    (34) comando -> . IDENT ASSIGN expressao pt_virgula_opc
    (35) comando -> . IF condicao THEN comandos pfalsa DOLLAR
    (40) comando -> . WHILE condicao DO comandos DOLLAR
    (41) comando -> . IDENT lista_arg pt_virgula_opc

    END             reduce using rule 69 (empty -> .)
    DOLLAR          reduce using rule 69 (empty -> .)
    ELSE            reduce using rule 69 (empty -> .)
    READ            shift and go to state 22
    WRITE           shift and go to state 24
    IDENT           shift and go to state 23
    IF              shift and go to state 25
    WHILE           shift and go to state 26

    comando                        shift and go to state 21
    mais_comandos                  shift and go to state 35
    comandos                       shift and go to state 36
    empty                          shift and go to state 37

state 22

    (32) comando -> READ . LPAREN IDENT RPAREN pt_virgula_opc

    LPAREN          shift and go to state 38


state 23

    (34) comando -> IDENT . ASSIGN expressao pt_virgula_opc
    (41) comando -> IDENT . lista_arg pt_virgula_opc
    (42) lista_arg -> . LPAREN argumentos RPAREN
    (43) lista_arg -> . empty
    (69) empty -> .

    ASSIGN          shift and go to state 39
    LPAREN          shift and go to state 41
    SEMICOLON       reduce using rule 69 (empty -> .)
    READ            reduce using rule 69 (empty -> .)
    WRITE           reduce using rule 69 (empty -> .)
    IDENT           reduce using rule 69 (empty -> .)
    IF              reduce using rule 69 (empty -> .)
    WHILE           reduce using rule 69 (empty -> .)
    END             reduce using rule 69 (empty -> .)
    DOLLAR          reduce using rule 69 (empty -> .)
    ELSE            reduce using rule 69 (empty -> .)

    lista_arg                      shift and go to state 40
    empty                          shift and go to state 42

state 24

    (33) comando -> WRITE . LPAREN IDENT RPAREN pt_virgula_opc

    LPAREN          shift and go to state 43


state 25

    (35) comando -> IF . condicao THEN comandos pfalsa DOLLAR
    (36) condicao -> . expressao relacao expressao
    (53) expressao -> . termo outros_termos
    (58) termo -> . op_un fator mais_fatores
    (59) op_un -> . MINUS
    (60) op_un -> . empty
    (69) empty -> .

    MINUS           shift and go to state 48
    IDENT           reduce using rule 69 (empty -> .)
    NUM_INT         reduce using rule 69 (empty -> .)
    NUM_REAL        reduce using rule 69 (empty -> .)
    LPAREN          reduce using rule 69 (empty -> .)

    condicao                       shift and go to state 44
    expressao                      shift and go to state 45
    termo                          shift and go to state 46
    op_un                          shift and go to state 47
    empty                          shift and go to state 49

state 26

    (40) comando -> WHILE . condicao DO comandos DOLLAR
    (36) condicao -> . expressao relacao expressao
    (53) expressao -> . termo outros_termos
    (58) termo -> . op_un fator mais_fatores
    (59) op_un -> . MINUS
    (60) op_un -> . empty
    (69) empty -> .

    MINUS           shift and go to state 48
    IDENT           reduce using rule 69 (empty -> .)
    NUM_INT         reduce using rule 69 (empty -> .)
    NUM_REAL        reduce using rule 69 (empty -> .)
    LPAREN          reduce using rule 69 (empty -> .)

    condicao                       shift and go to state 50
    expressao                      shift and go to state 45
    termo                          shift and go to state 46
    op_un                          shift and go to state 47
    empty                          shift and go to state 49

state 27

    (6) mais_dc -> SEMICOLON dc .

    BEGIN           reduce using rule 6 (mais_dc -> SEMICOLON dc .)


state 28

    (8) dc_v -> VAR variaveis COLON . tipo_var
    (9) tipo_var -> . REAL
    (10) tipo_var -> . INTEGER

    REAL            shift and go to state 52
    INTEGER         shift and go to state 53

    tipo_var                       shift and go to state 51

state 29

    (11) variaveis -> IDENT mais_var .

    COLON           reduce using rule 11 (variaveis -> IDENT mais_var .)


state 30

    (12) mais_var -> COMMA . variaveis
    (11) variaveis -> . IDENT mais_var

    IDENT           shift and go to state 18

    variaveis                      shift and go to state 54

state 31

    (13) mais_var -> empty .

    COLON           reduce using rule 13 (mais_var -> empty .)


state 32

    (16) dc_p -> PROCEDURE IDENT inicio_escopo . parameters corpo_p fim_escopo
    (17) parameters -> . LPAREN lista_par RPAREN
    (18) parameters -> . empty
    (69) empty -> .

    LPAREN          shift and go to state 56
    VAR             reduce using rule 69 (empty -> .)
    BEGIN           reduce using rule 69 (empty -> .)

    parameters                     shift and go to state 55
    empty                          shift and go to state 57

state 33

    (14) inicio_escopo -> empty .

    LPAREN          reduce using rule 14 (inicio_escopo -> empty .)
    VAR             reduce using rule 14 (inicio_escopo -> empty .)
    BEGIN           reduce using rule 14 (inicio_escopo -> empty .)


state 34

    (2) corpo -> dc BEGIN comandos END .

    DOT             reduce using rule 2 (corpo -> dc BEGIN comandos END .)


state 35

    (27) comandos -> comando mais_comandos .

    END             reduce using rule 27 (comandos -> comando mais_comandos .)
    DOLLAR          reduce using rule 27 (comandos -> comando mais_comandos .)
    ELSE            reduce using rule 27 (comandos -> comando mais_comandos .)


state 36

    (28) mais_comandos -> comandos .

    END             reduce using rule 28 (mais_comandos -> comandos .)
    DOLLAR          reduce using rule 28 (mais_comandos -> comandos .)
    ELSE            reduce using rule 28 (mais_comandos -> comandos .)


state 37

    (29) mais_comandos -> empty .

    END             reduce using rule 29 (mais_comandos -> empty .)
    DOLLAR          reduce using rule 29 (mais_comandos -> empty .)
    ELSE            reduce using rule 29 (mais_comandos -> empty .)


state 38

    (32) comando -> READ LPAREN . IDENT RPAREN pt_virgula_opc

    IDENT           shift and go to state 58


state 39

    (34) comando -> IDENT ASSIGN . expressao pt_virgula_opc
    (53) expressao -> . termo outros_termos
    (58) termo -> . op_un fator mais_fatores
    (59) op_un -> . MINUS
    (60) op_un -> . empty
    (69) empty -> .

    MINUS           shift and go to state 48
    IDENT           reduce using rule 69 (empty -> .)
    NUM_INT         reduce using rule 69 (empty -> .)
    NUM_REAL        reduce using rule 69 (empty -> .)
    LPAREN          reduce using rule 69 (empty -> .)

    expressao                      shift and go to state 59
    termo                          shift and go to state 46
    op_un                          shift and go to state 47
    empty                          shift and go to state 49

state 40

    (41) comando -> IDENT lista_arg . pt_virgula_opc
    (30) pt_virgula_opc -> . SEMICOLON
    (31) pt_virgula_opc -> . empty
    (69) empty -> .

    SEMICOLON       shift and go to state 61
    READ            reduce using rule 69 (empty -> .)
    WRITE           reduce using rule 69 (empty -> .)
    IDENT           reduce using rule 69 (empty -> .)
    IF              reduce using rule 69 (empty -> .)
    WHILE           reduce using rule 69 (empty -> .)
    END             reduce using rule 69 (empty -> .)
    DOLLAR          reduce using rule 69 (empty -> .)
    ELSE            reduce using rule 69 (empty -> .)

    pt_virgula_opc                 shift and go to state 60
    empty                          shift and go to state 62

state 41

    (42) lista_arg -> LPAREN . argumentos RPAREN
    (44) argumentos -> . IDENT mais_ident

    IDENT           shift and go to state 64

    argumentos                     shift and go to state 63

state 42

    (43) lista_arg -> empty .

    SEMICOLON       reduce using rule 43 (lista_arg -> empty .)
    READ            reduce using rule 43 (lista_arg -> empty .)
    WRITE           reduce using rule 43 (lista_arg -> empty .)
    IDENT           reduce using rule 43 (lista_arg -> empty .)
    IF              reduce using rule 43 (lista_arg -> empty .)
    WHILE           reduce using rule 43 (lista_arg -> empty .)
    END             reduce using rule 43 (lista_arg -> empty .)
    DOLLAR          reduce using rule 43 (lista_arg -> empty .)
    ELSE            reduce using rule 43 (lista_arg -> empty .)


state 43

    (33) comando -> WRITE LPAREN . IDENT RPAREN pt_virgula_opc

    IDENT           shift and go to state 65


state 44

    (35) comando -> IF condicao . THEN comandos pfalsa DOLLAR

    THEN            shift and go to state 66


state 45

    (36) condicao -> expressao . relacao expressao
    (47) relacao -> . EQ
    (48) relacao -> . NEQ
    (49) relacao -> . GTE
    (50) relacao -> . LTE
    (51) relacao -> . GT
    (52) relacao -> . LT

    EQ              shift and go to state 68
    NEQ             shift and go to state 69
    GTE             shift and go to state 70
    LTE             shift and go to state 71
    GT              shift and go to state 72
    LT              shift and go to state 73

    relacao                        shift and go to state 67

state 46

    (53) expressao -> termo . outros_termos
    (54) outros_termos -> . op_ad termo outros_termos
    (55) outros_termos -> . empty
    (56) op_ad -> . PLUS
    (57) op_ad -> . MINUS
    (69) empty -> .

    PLUS            shift and go to state 77
    MINUS           shift and go to state 78
    EQ              reduce using rule 69 (empty -> .)
    NEQ             reduce using rule 69 (empty -> .)
    GTE             reduce using rule 69 (empty -> .)
    LTE             reduce using rule 69 (empty -> .)
    GT              reduce using rule 69 (empty -> .)
    LT              reduce using rule 69 (empty -> .)
    SEMICOLON       reduce using rule 69 (empty -> .)
    READ            reduce using rule 69 (empty -> .)
    WRITE           reduce using rule 69 (empty -> .)
    IDENT           reduce using rule 69 (empty -> .)
    IF              reduce using rule 69 (empty -> .)
    WHILE           reduce using rule 69 (empty -> .)
    END             reduce using rule 69 (empty -> .)
    DOLLAR          reduce using rule 69 (empty -> .)
    ELSE            reduce using rule 69 (empty -> .)
    THEN            reduce using rule 69 (empty -> .)
    DO              reduce using rule 69 (empty -> .)
    RPAREN          reduce using rule 69 (empty -> .)

    outros_termos                  shift and go to state 74
    op_ad                          shift and go to state 75
    empty                          shift and go to state 76

state 47

    (58) termo -> op_un . fator mais_fatores
    (65) fator -> . IDENT
    (66) fator -> . NUM_INT
    (67) fator -> . NUM_REAL
    (68) fator -> . LPAREN expressao RPAREN

    IDENT           shift and go to state 80
    NUM_INT         shift and go to state 81
    NUM_REAL        shift and go to state 82
    LPAREN          shift and go to state 83

    fator                          shift and go to state 79

state 48

    (59) op_un -> MINUS .

    IDENT           reduce using rule 59 (op_un -> MINUS .)
    NUM_INT         reduce using rule 59 (op_un -> MINUS .)
    NUM_REAL        reduce using rule 59 (op_un -> MINUS .)
    LPAREN          reduce using rule 59 (op_un -> MINUS .)


state 49

    (60) op_un -> empty .

    IDENT           reduce using rule 60 (op_un -> empty .)
    NUM_INT         reduce using rule 60 (op_un -> empty .)
    NUM_REAL        reduce using rule 60 (op_un -> empty .)
    LPAREN          reduce using rule 60 (op_un -> empty .)


state 50

    (40) comando -> WHILE condicao . DO comandos DOLLAR

    DO              shift and go to state 84


state 51

    (8) dc_v -> VAR variaveis COLON tipo_var .

    SEMICOLON       reduce using rule 8 (dc_v -> VAR variaveis COLON tipo_var .)
    BEGIN           reduce using rule 8 (dc_v -> VAR variaveis COLON tipo_var .)


state 52

    (9) tipo_var -> REAL .

    SEMICOLON       reduce using rule 9 (tipo_var -> REAL .)
    BEGIN           reduce using rule 9 (tipo_var -> REAL .)
    RPAREN          reduce using rule 9 (tipo_var -> REAL .)


state 53

    (10) tipo_var -> INTEGER .

    SEMICOLON       reduce using rule 10 (tipo_var -> INTEGER .)
    BEGIN           reduce using rule 10 (tipo_var -> INTEGER .)
    RPAREN          reduce using rule 10 (tipo_var -> INTEGER .)


state 54

    (12) mais_var -> COMMA variaveis .

    COLON           reduce using rule 12 (mais_var -> COMMA variaveis .)


state 55

    (16) dc_p -> PROCEDURE IDENT inicio_escopo parameters . corpo_p fim_escopo
    (22) corpo_p -> . dc_loc BEGIN comandos END
    (23) dc_loc -> . dc_v mais_dcloc
    (24) dc_loc -> . empty
    (8) dc_v -> . VAR variaveis COLON tipo_var
    (69) empty -> .

    VAR             shift and go to state 9
    BEGIN           reduce using rule 69 (empty -> .)

    corpo_p                        shift and go to state 85
    dc_loc                         shift and go to state 86
    dc_v                           shift and go to state 87
    empty                          shift and go to state 88

state 56

    (17) parameters -> LPAREN . lista_par RPAREN
    (19) lista_par -> . variaveis COLON tipo_var mais_par
    (11) variaveis -> . IDENT mais_var

    IDENT           shift and go to state 18

    lista_par                      shift and go to state 89
    variaveis                      shift and go to state 90

state 57

    (18) parameters -> empty .

    VAR             reduce using rule 18 (parameters -> empty .)
    BEGIN           reduce using rule 18 (parameters -> empty .)


state 58

    (32) comando -> READ LPAREN IDENT . RPAREN pt_virgula_opc

    RPAREN          shift and go to state 91


state 59

    (34) comando -> IDENT ASSIGN expressao . pt_virgula_opc
    (30) pt_virgula_opc -> . SEMICOLON
    (31) pt_virgula_opc -> . empty
    (69) empty -> .

    SEMICOLON       shift and go to state 61
    READ            reduce using rule 69 (empty -> .)
    WRITE           reduce using rule 69 (empty -> .)
    IDENT           reduce using rule 69 (empty -> .)
    IF              reduce using rule 69 (empty -> .)
    WHILE           reduce using rule 69 (empty -> .)
    END             reduce using rule 69 (empty -> .)
    DOLLAR          reduce using rule 69 (empty -> .)
    ELSE            reduce using rule 69 (empty -> .)

    pt_virgula_opc                 shift and go to state 92
    empty                          shift and go to state 62

state 60

    (41) comando -> IDENT lista_arg pt_virgula_opc .

    READ            reduce using rule 41 (comando -> IDENT lista_arg pt_virgula_opc .)
    WRITE           reduce using rule 41 (comando -> IDENT lista_arg pt_virgula_opc .)
    IDENT           reduce using rule 41 (comando -> IDENT lista_arg pt_virgula_opc .)
    IF              reduce using rule 41 (comando -> IDENT lista_arg pt_virgula_opc .)
    WHILE           reduce using rule 41 (comando -> IDENT lista_arg pt_virgula_opc .)
    END             reduce using rule 41 (comando -> IDENT lista_arg pt_virgula_opc .)
    DOLLAR          reduce using rule 41 (comando -> IDENT lista_arg pt_virgula_opc .)
    ELSE            reduce using rule 41 (comando -> IDENT lista_arg pt_virgula_opc .)


state 61

    (30) pt_virgula_opc -> SEMICOLON .

    READ            reduce using rule 30 (pt_virgula_opc -> SEMICOLON .)
    WRITE           reduce using rule 30 (pt_virgula_opc -> SEMICOLON .)
    IDENT           reduce using rule 30 (pt_virgula_opc -> SEMICOLON .)
    IF              reduce using rule 30 (pt_virgula_opc -> SEMICOLON .)
    WHILE           reduce using rule 30 (pt_virgula_opc -> SEMICOLON .)
    END             reduce using rule 30 (pt_virgula_opc -> SEMICOLON .)
    DOLLAR          reduce using rule 30 (pt_virgula_opc -> SEMICOLON .)
    ELSE            reduce using rule 30 (pt_virgula_opc -> SEMICOLON .)


state 62

    (31) pt_virgula_opc -> empty .

    READ            reduce using rule 31 (pt_virgula_opc -> empty .)
    WRITE           reduce using rule 31 (pt_virgula_opc -> empty .)
    IDENT           reduce using rule 31 (pt_virgula_opc -> empty .)
    IF              reduce using rule 31 (pt_virgula_opc -> empty .)
    WHILE           reduce using rule 31 (pt_virgula_opc -> empty .)
    END             reduce using rule 31 (pt_virgula_opc -> empty .)
    DOLLAR          reduce using rule 31 (pt_virgula_opc -> empty .)
    ELSE            reduce using rule 31 (pt_virgula_opc -> empty .)


state 63

    (42) lista_arg -> LPAREN argumentos . RPAREN

    RPAREN          shift and go to state 93


state 64

    (44) argumentos -> IDENT . mais_ident
    (45) mais_ident -> . COMMA argumentos
    (46) mais_ident -> . empty
    (69) empty -> .

    COMMA           shift and go to state 95
    RPAREN          reduce using rule 69 (empty -> .)

    mais_ident                     shift and go to state 94
    empty                          shift and go to state 96

state 65

    (33) comando -> WRITE LPAREN IDENT . RPAREN pt_virgula_opc

    RPAREN          shift and go to state 97


state 66

    (35) comando -> IF condicao THEN . comandos pfalsa DOLLAR
    (27) comandos -> . comando mais_comandos
    (32) comando -> . READ LPAREN IDENT RPAREN pt_virgula_opc
    (33) comando -> . WRITE LPAREN IDENT RPAREN pt_virgula_opc
    (34) comando -> . IDENT ASSIGN expressao pt_virgula_opc
    (35) comando -> . IF condicao THEN comandos pfalsa DOLLAR
    (40) comando -> . WHILE condicao DO comandos DOLLAR
    (41) comando -> . IDENT lista_arg pt_virgula_opc

    READ            shift and go to state 22
    WRITE           shift and go to state 24
    IDENT           shift and go to state 23
    IF              shift and go to state 25
    WHILE           shift and go to state 26

    comandos                       shift and go to state 98
    comando                        shift and go to state 21

state 67

    (36) condicao -> expressao relacao . expressao
    (53) expressao -> . termo outros_termos
    (58) termo -> . op_un fator mais_fatores
    (59) op_un -> . MINUS
    (60) op_un -> . empty
    (69) empty -> .

    MINUS           shift and go to state 48
    IDENT           reduce using rule 69 (empty -> .)
    NUM_INT         reduce using rule 69 (empty -> .)
    NUM_REAL        reduce using rule 69 (empty -> .)
    LPAREN          reduce using rule 69 (empty -> .)

    expressao                      shift and go to state 99
    termo                          shift and go to state 46
    op_un                          shift and go to state 47
    empty                          shift and go to state 49

state 68

    (47) relacao -> EQ .

    MINUS           reduce using rule 47 (relacao -> EQ .)
    IDENT           reduce using rule 47 (relacao -> EQ .)
    NUM_INT         reduce using rule 47 (relacao -> EQ .)
    NUM_REAL        reduce using rule 47 (relacao -> EQ .)
    LPAREN          reduce using rule 47 (relacao -> EQ .)


state 69

    (48) relacao -> NEQ .

    MINUS           reduce using rule 48 (relacao -> NEQ .)
    IDENT           reduce using rule 48 (relacao -> NEQ .)
    NUM_INT         reduce using rule 48 (relacao -> NEQ .)
    NUM_REAL        reduce using rule 48 (relacao -> NEQ .)
    LPAREN          reduce using rule 48 (relacao -> NEQ .)


state 70

    (49) relacao -> GTE .

    MINUS           reduce using rule 49 (relacao -> GTE .)
    IDENT           reduce using rule 49 (relacao -> GTE .)
    NUM_INT         reduce using rule 49 (relacao -> GTE .)
    NUM_REAL        reduce using rule 49 (relacao -> GTE .)
    LPAREN          reduce using rule 49 (relacao -> GTE .)


state 71

    (50) relacao -> LTE .

    MINUS           reduce using rule 50 (relacao -> LTE .)
    IDENT           reduce using rule 50 (relacao -> LTE .)
    NUM_INT         reduce using rule 50 (relacao -> LTE .)
    NUM_REAL        reduce using rule 50 (relacao -> LTE .)
    LPAREN          reduce using rule 50 (relacao -> LTE .)


state 72

    (51) relacao -> GT .

    MINUS           reduce using rule 51 (relacao -> GT .)
    IDENT           reduce using rule 51 (relacao -> GT .)
    NUM_INT         reduce using rule 51 (relacao -> GT .)
    NUM_REAL        reduce using rule 51 (relacao -> GT .)
    LPAREN          reduce using rule 51 (relacao -> GT .)


state 73

    (52) relacao -> LT .

    MINUS           reduce using rule 52 (relacao -> LT .)
    IDENT           reduce using rule 52 (relacao -> LT .)
    NUM_INT         reduce using rule 52 (relacao -> LT .)
    NUM_REAL        reduce using rule 52 (relacao -> LT .)
    LPAREN          reduce using rule 52 (relacao -> LT .)


state 74

    (53) expressao -> termo outros_termos .

    EQ              reduce using rule 53 (expressao -> termo outros_termos .)
    NEQ             reduce using rule 53 (expressao -> termo outros_termos .)
    GTE             reduce using rule 53 (expressao -> termo outros_termos .)
    LTE             reduce using rule 53 (expressao -> termo outros_termos .)
    GT              reduce using rule 53 (expressao -> termo outros_termos .)
    LT              reduce using rule 53 (expressao -> termo outros_termos .)
    SEMICOLON       reduce using rule 53 (expressao -> termo outros_termos .)
    READ            reduce using rule 53 (expressao -> termo outros_termos .)
    WRITE           reduce using rule 53 (expressao -> termo outros_termos .)
    IDENT           reduce using rule 53 (expressao -> termo outros_termos .)
    IF              reduce using rule 53 (expressao -> termo outros_termos .)
    WHILE           reduce using rule 53 (expressao -> termo outros_termos .)
    END             reduce using rule 53 (expressao -> termo outros_termos .)
    DOLLAR          reduce using rule 53 (expressao -> termo outros_termos .)
    ELSE            reduce using rule 53 (expressao -> termo outros_termos .)
    THEN            reduce using rule 53 (expressao -> termo outros_termos .)
    DO              reduce using rule 53 (expressao -> termo outros_termos .)
    RPAREN          reduce using rule 53 (expressao -> termo outros_termos .)


state 75

    (54) outros_termos -> op_ad . termo outros_termos
    (58) termo -> . op_un fator mais_fatores
    (59) op_un -> . MINUS
    (60) op_un -> . empty
    (69) empty -> .

    MINUS           shift and go to state 48
    IDENT           reduce using rule 69 (empty -> .)
    NUM_INT         reduce using rule 69 (empty -> .)
    NUM_REAL        reduce using rule 69 (empty -> .)
    LPAREN          reduce using rule 69 (empty -> .)

    termo                          shift and go to state 100
    op_un                          shift and go to state 47
    empty                          shift and go to state 49

state 76

    (55) outros_termos -> empty .
